# granularity_tsad

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
MyAlgo/: MyAlgo_CLOF.py  MyAlgo_DM.py  MyAlgo_ESN.py  MyAlgo_ISOF.py  MyAlgo_TAE.py
config/: paper.yaml
granularity_tsad/: __init__.py  aggregation.py  clustering.py  config.py  data.py  easytsad_runner.py
granularity_tsad/metrics/: __init__.py  pak.py  pointwise.py  sequencewise.py
granularity_tsad/plots/: __init__.py  bayesian.py  boxplots.py  dendrogram.py  heatmap.py  pak_curves.py  profiles.py  style.py
lib/EasyTSAD/EasyTSAD/Controller/: GlobalCfg.toml  PathManager.py  TSADController.py
lib/EasyTSAD/EasyTSAD/DataFactory/TorchDataSet/: PredictWindow.py  ReconstructWindow.py
lib/EasyTSAD/EasyTSAD/Evaluations/: Performance.py
lib/EasyTSAD/EasyTSAD/Evaluations/Protocols/: PointF1.py  VUS.py
lib/EasyTSAD/EasyTSAD/Methods/: __init__.py
lib/EasyTSAD/EasyTSAD/Methods/AE/: AE.py
lib/EasyTSAD/EasyTSAD/TrainingSchema/: Naive.py
lib/MyAlgo/: MyAlgo_CLOF.py  MyAlgo_DM.py  MyAlgo_ESN.py  MyAlgo_ISOF.py  MyAlgo_TAE.py  __init__.py  _compat.py
lib/tsadalia/: .gitignore  .gitlab-ci.yml  LICENSE  README.md  requirements.txt  setup.py
lib/tsadalia/demo/: demo.py
lib/tsadalia/tsdalia/: __init__.py  anomaly_detector.py  functions.py
lib/tsadalia/tsdalia/models/: basic_autoencoder.py  diffusion.py  diffusion_autoencoder.py  transformer_autoencoder.py  unet.py
scripts/: 1_run_detectors.py  2_compute_metrics.py  3_generate_figures.py  heatmap_from_scratch.py
(+21 files in other folders)
